[gd_scene load_steps=23 format=3 uid="uid://lqeool02o7dd"]

[ext_resource type="Script" path="res://Assets/Characters/Mary/custom_layered_portrait.gd" id="1_uubi5"]
[ext_resource type="Texture2D" uid="uid://v0ul8feh5st8" path="res://Assets/Characters/Chris/portraitbase.png" id="2_qjgjs"]
[ext_resource type="Texture2D" uid="uid://4u1r4cvnvh35" path="res://Assets/Characters/Chris/portraitbottom.png" id="3_dn7wu"]
[ext_resource type="Texture2D" uid="uid://b76nu7f1li058" path="res://Assets/Characters/Chris/portraittop.png" id="3_ub8ca"]
[ext_resource type="Texture2D" uid="uid://cy4xtgqbu06e0" path="res://Assets/Characters/Chris/Face/chrisface_0002.png" id="5_5dd3e"]
[ext_resource type="Texture2D" uid="uid://doao50uokmf2n" path="res://Assets/Characters/Chris/Face/chrisblink_0001.png" id="5_bgfas"]
[ext_resource type="Texture2D" uid="uid://c40yy70tlm71b" path="res://Assets/Characters/Chris/Face/chrisblink_0002.png" id="6_qywmk"]
[ext_resource type="Texture2D" uid="uid://dfc5242kqamqc" path="res://Assets/Characters/Chris/Face/chrisblink_0003.png" id="7_qjhky"]
[ext_resource type="Texture2D" uid="uid://citr722130b73" path="res://Assets/Characters/Chris/Face/christalk_0001.png" id="8_ksw72"]
[ext_resource type="Texture2D" uid="uid://qsrgsy0fau5q" path="res://Assets/Characters/Chris/Face/christalk_0002.png" id="9_ttsw5"]
[ext_resource type="Texture2D" uid="uid://owmje5mj1mb1" path="res://Assets/Characters/Chris/Face/christalk_0003.png" id="10_jdjyy"]
[ext_resource type="Texture2D" uid="uid://bl358kswdacd7" path="res://Assets/UI/static.png" id="12_mijwh"]

[sub_resource type="Gradient" id="Gradient_qdw41"]
colors = PackedColorArray(0, 0, 0, 1, 0.351563, 0.351563, 0.351563, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8g8gd"]
gradient = SubResource("Gradient_qdw41")
width = 140

[sub_resource type="SpriteFrames" id="SpriteFrames_wlxrh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ksw72")
}, {
"duration": 1.0,
"texture": ExtResource("9_ttsw5")
}, {
"duration": 1.0,
"texture": ExtResource("10_jdjyy")
}, {
"duration": 1.0,
"texture": ExtResource("9_ttsw5")
}],
"loop": true,
"name": &"talk",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rgorg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5dd3e")
}, {
"duration": 1.0,
"texture": ExtResource("5_bgfas")
}, {
"duration": 1.0,
"texture": ExtResource("6_qywmk")
}, {
"duration": 1.0,
"texture": ExtResource("7_qjhky")
}, {
"duration": 1.0,
"texture": ExtResource("6_qywmk")
}],
"loop": false,
"name": &"blink",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sj6aq"]
atlas = ExtResource("12_mijwh")
region = Rect2(0, 0, 498, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxl4p"]
atlas = ExtResource("12_mijwh")
region = Rect2(498, 0, 498, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsgsa"]
atlas = ExtResource("12_mijwh")
region = Rect2(996, 0, 498, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttbx4"]
atlas = ExtResource("12_mijwh")
region = Rect2(1494, 0, 498, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxb7o"]
atlas = ExtResource("12_mijwh")
region = Rect2(1992, 0, 498, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_wp8mn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj6aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxl4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsgsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttbx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxb7o")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="LayeredPortrait" type="CanvasGroup"]
script = ExtResource("1_uubi5")

[node name="Layer1" type="Sprite2D" parent="."]
scale = Vector2(1, 100)
texture = SubResource("GradientTexture1D_8g8gd")
centered = false

[node name="Group1" type="Node2D" parent="."]
position = Vector2(20.535, 0)
scale = Vector2(0.697, 0.697)

[node name="Layer1" type="Sprite2D" parent="Group1"]
position = Vector2(-30.1291, 0)
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_qjgjs")
centered = false

[node name="Layer3" type="Sprite2D" parent="Group1"]
position = Vector2(-30.1291, 0)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_ub8ca")
centered = false

[node name="Layer2" type="Sprite2D" parent="Group1"]
position = Vector2(-30.1291, 0)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_dn7wu")
centered = false

[node name="Mouth" type="AnimatedSprite2D" parent="Group1"]
position = Vector2(-30.1291, 0)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_wlxrh")
animation = &"talk"
frame_progress = 0.309499
centered = false

[node name="Eyes" type="AnimatedSprite2D" parent="Group1"]
position = Vector2(-30.1291, 0)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_rgorg")
animation = &"blink"
frame = 4
frame_progress = 1.0
centered = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Group1"]
visible = false
position = Vector2(-52.4175, 0)
scale = Vector2(0.516499, 0.516499)
sprite_frames = SubResource("SpriteFrames_wp8mn")
frame = 4
frame_progress = 1.0
centered = false

[node name="BlinkTimer" type="Timer" parent="Group1"]
wait_time = 6.51532
one_shot = true

[connection signal="animation_finished" from="Group1/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
